# penn-degree-planner

degree_planner/: .dockerignore  Cargo.toml  Dockerfile  courses-ee.txt  courses-wh-mt.txt  courses-wh.txt  fly.toml  source.py  transpile.py
degree_planner/src/: attributes_data.rs  college_data.rs  course.rs  main.rs  major.rs  requirement.rs  seas_data.rs  wharton_data.rs
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.js  page.js
frontend/app/components/: CourseSearch.js  DegreeSelector.js  DraggableCourse.js  DroppableSemester.js  RequirementsPanel.js  ScheduleGrid.js
frontend/lib/: api.js  courseUtils.js  requirementText.js  semesterOptions.js
